# superposition

./: .gitignore  README.md  glove.sh  l1_coef.sh  pyproject.toml  pythia.sh
experiments/: 2d.py  glove.py  l1_coef.py  norm.py  pythia.py
superposition/: ffn.py  trainer.py  util.py
superposition/autoencoders/: __init__.py  base.py  standard.py  topk.py
superposition/datasets/: __init__.py  base.py  gaussian.py  glove.py  lomax.py  pythia.py  sharkey.py
