[project]
name = "superposition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "ruff>=0.9.1",
    "simple-parsing>=0.1.6",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.50.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["F722", "F821", "UP037"]
select = ["E", "F", "UP", "B", "SIM", "I"]
unfixable = ["F401"]

[tool.setuptools.packages.find]
include = ["superposition"]
namespaces = false
